...
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5DI-kV-2RF">
                                <rect key="frame" x="159" y="268" width="57" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="tapRegister:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5r7-nb-2sg"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Register" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Pe-Pe-bQY">
...
